--- a/src/routes/MapPage/MapPage.css
+++ b/src/routes/MapPage/MapPage.css
@@ -1,7 +1,5 @@
 .map-page-container {
     position: relative;
-    width: 100vw;
-    height: 100vh;
 }
 
 .map-page-container .nav-and-back-button {
@@ -11,7 +9,7 @@
     left: 0;
     padding: 0.5em;
     gap: 0.25em;
-    z-index: 10;
+    z-index: 100;
     max-width: 500px;
     margin: 0 auto;
     display: flex;
