--- a/src/style/index.css
+++ b/src/style/index.css
@@ -9,9 +9,6 @@
 }
 
 body {
-    height: 100vh;
-    width: 100vw;
-    overflow: hidden;
     background-color: rgba(211, 211, 211, 0.5);
 }
 
@@ -29,6 +26,6 @@ button {
     cursor: pointer;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     display: none;
 }
